# codex-manager

./: .gitignore  README.en.md  README.md  index.html  package-lock.json  package.json  tsconfig.json
.claude/: settings.local.json
.github/workflows/: release.yml
scripts/: build-macos-pkg.sh  install-unix-cli.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/macos/pkg/: postinstall
src-tauri/src/: atomic_io.rs  cli.rs  lib.rs  main.rs  models.rs  net.rs
src-tauri/src/commands/: accounts.rs  desktop.rs  mod.rs  oauth.rs  paths.rs  sessions.rs  usage.rs
src-tauri/src/platform/: codex.rs
src/components/: AccountCard.tsx  AccountList.tsx  AddAccountModal.tsx  ConfirmDialog.tsx  EmptyState.tsx  Header.tsx  SessionBadge.tsx  SettingsModal.tsx  SwitchProgress.tsx  Toast.tsx  TrayPanel.tsx  UsageChart.tsx  UsageStatsPage.tsx
src/hooks/: useAccountSwitch.ts
src/store/: accountStore.ts
src/types/: index.ts
src/utils/: accounts.ts  backup.ts  dashboard.ts  invoke.ts  motion.ts  quotaCompass.ts  quotaValue.ts  tokenLedger.ts
tests/: accounts.test.ts  backup.test.ts  dashboard.test.ts  quotaCompass.test.ts  quotaValue.test.ts
