[package]
name = "codex-manager"
version = "0.1.0"
edition = "2021"

[lib]
name = "codex_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "socks"], default-features = false }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
anyhow = "1"
thiserror = "1"

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
