[package]
name = "codex-manager"
version = "1.2.10"
edition = "2021"
default-run = "codex-manager"

[lib]
name = "codex_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "socks"], default-features = false }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
anyhow = "1"
thiserror = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_UI_WindowsAndMessaging"] }
winreg = "0.55"

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
